--- a/package.json
+++ b/package.json
@@ -140,6 +140,7 @@
     "graphql-type-json": "0.3.2",
     "immutable": "^4.1.0",
     "isomorphic-fetch": "^3.0.0",
+    "jest-text-transformer": "^1.0.4",
     "joi": "^17.9.2",
     "jquery": "3.6.4",
     "jwks-rsa": "^3.0.1",
