--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -69,6 +69,9 @@
       "@codelab/backend/application/resource": [
         "libs/backend/application/resource/src/index.ts"
       ],
+      "@codelab/backend/application/auth-guard": [
+        "libs/backend/application/auth-guard/src/index.ts"
+      ],
       "@codelab/backend/application/shared": [
         "libs/backend/application/shared/src/index.ts"
       ],
@@ -106,6 +109,9 @@
       "@codelab/backend/domain/prop": ["libs/backend/domain/prop/src/index.ts"],
       "@codelab/backend/domain/resource": [
         "libs/backend/domain/resource/src/index.ts"
+      ],
+      "@codelab/backend/domain/auth-guard": [
+        "libs/backend/domain/auth-guard/src/index.ts"
       ],
       "@codelab/backend/domain/shared/auth": [
         "libs/backend/domain/shared/auth/src/index.ts"
