test: action runners tests

--- a/package.json
+++ b/package.json
@@ -393,6 +393,7 @@
     "lerna": "^7.0.1",
     "lint-staged": "13.2.2",
     "madge": "5.0.1",
+    "nock": "^13.3.6",
     "nx": "16.10.0",
     "nx-cloud": "16.4.0",
     "postcss": "8.4.24",
