--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@codemirror/state": "^6.2.1",
     "@codemirror/view": "^6.16.0",
     "@dnd-kit/core": "6.0.5",
+    "@dnd-kit/modifiers": "^6.0.1",
     "@editorjs/editorjs": "^2.28.0",
     "@fancyapps/ui": "4.0.16",
     "@fortawesome/fontawesome-pro": "6.1.2",
