wip: add redirect to auth guard

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -279,6 +279,7 @@
       "@codelab/frontend/domain/prop": [
         "libs/frontend/domain/prop/src/index.ts"
       ],
+      "@codelab/frontend/domain/url": ["libs/frontend/domain/url/src/index.ts"],
       "@codelab/frontend/domain/renderer": [
         "libs/frontend/domain/renderer/src/index.ts"
       ],
