--- a/libs/frontend/application/renderer/tsconfig.lib.json
+++ b/libs/frontend/application/renderer/tsconfig.lib.json
@@ -19,5 +19,11 @@
     "**/*.spec.jsx",
     "**/*.test.jsx"
   ],
-  "include": ["**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx"]
+  "include": [
+    "**/*.js",
+    "**/*.jsx",
+    "**/*.ts",
+    "**/*.tsx",
+    "../../shared/core/src/state-expression.ts"
+  ]
 }
