--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@
 # Ignore everything in 'dist/libs/tools' except 'workspace'
 /dist/libs/tools/*
 !/dist/libs/tools/workspace/
+!/dist/libs/tools/eslint-plugin/
 tmp/
 out-tsc/
 
