revert: unwanted rebase changes

--- a/libs/frontend/abstract/application/project.json
+++ b/libs/frontend/abstract/application/project.json
@@ -21,10 +21,5 @@
       }
     }
   },
-  "tags": [
-    "projectType:library",
-    "type:abstract",
-    "scope:frontend",
-    "layer:application"
-  ]
+  "tags": ["projectType:library", "type:abstract", "scope:frontend"]
 }
