--- a/libs/backend/infra/adapter/codelab/project.json
+++ b/libs/backend/infra/adapter/codelab/project.json
@@ -1,30 +1,30 @@
 {
-  "$schema": "../../../../../node_modules/nx/schemas/project-schema.json",
   "name": "backend-infra-adapter-codelab",
-  "projectType": "library",
+  "$schema": "../../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/backend/infra/adapter/codelab/src",
-  "tags": [
-    "projectType:library",
-    "type:concrete",
-    "layer:infra",
-    "scope:backend"
-  ],
+  "projectType": "library",
   "targets": {
     "lint": {
+      "executor": "@nx/eslint:lint",
+      "outputs": ["{options.outputFile}"],
+      "options": {
+        "lintFilePatterns": [
+          "libs/backend/infra/adapter/codelab/**/*.{ts,tsx,js,jsx,graphql}"
+        ]
+      },
       "configurations": {
         "ci": {
           "format": "junit",
           "outputFile": "tmp/reports/lint/backend-infra-adapter-codelab.xml",
           "quiet": true
         }
-      },
-      "executor": "@nx/eslint:lint",
-      "options": {
-        "lintFilePatterns": [
-          "libs/backend/infra/adapter/codelab/**/*.{ts,tsx,js,jsx,graphql}"
-        ]
-      },
-      "outputs": ["{options.outputFile}"]
+      }
     }
-  }
+  },
+  "tags": [
+    "projectType:library",
+    "type:concrete",
+    "layer:infra",
+    "scope:backend"
+  ]
 }
