--- a/libs/backend/infra/adapter/typebox/project.json
+++ b/libs/backend/infra/adapter/typebox/project.json
@@ -1,14 +1,32 @@
 {
   "$schema": "../../../../../node_modules/nx/schemas/project-schema.json",
-  "name": "backend-infra-adapter-typebox",
+  "name": "backend-infra-adapter-codelab",
   "projectType": "library",
-  "sourceRoot": "libs/backend/infra/adapter/typebox/src",
+  "sourceRoot": "libs/backend/infra/adapter/codelab/src",
   "tags": [
     "projectType:library",
     "type:concrete",
     "layer:infra",
     "scope:backend"
   ],
+  "targets": {
+    "lint": {
+      "configurations": {
+        "ci": {
+          "format": "junit",
+          "outputFile": "tmp/reports/lint/backend-infra-adapter-codelab.xml",
+          "quiet": true
+        }
+      },
+      "executor": "@nx/eslint:lint",
+      "options": {
+        "lintFilePatterns": [
+          "libs/backend/infra/adapter/codelab/**/*.{ts,tsx,js,jsx,graphql}"
+        ]
+      },
+      "outputs": ["{options.outputFile}"]
+    }
+  },
   "targets": {
     "lint": {
       "configurations": {
