--- a/libs/frontend/application/domain/.eslintrc.json
+++ b/libs/frontend/application/domain/.eslintrc.json
@@ -1,30 +1,25 @@
 {
-  "name": "frontend-infra-mobx",
-  "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/frontend/infra/mobx/src",
-  "projectType": "library",
-  "targets": {
-    "lint": {
-      "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": [
-          "libs/frontend/infra/mobx/**/*.{ts,tsx,js,jsx,graphql}"
-        ]
+  "extends": ["plugin:@nx/react", "../../../../.eslintrc.json"],
+  "ignorePatterns": ["!**/*"],
+  "overrides": [
+    {
+      "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
+      "parserOptions": {
+        "project": ["libs/frontend/application/domain/tsconfig.*?.json"]
       },
-      "configurations": {
-        "ci": {
-          "format": "junit",
-          "outputFile": "tmp/reports/lint/frontend-infra-mobx.xml",
-          "quiet": true
-        }
-      }
+      "rules": {}
+    },
+    {
+      "files": ["*.ts", "*.tsx"],
+      "rules": {}
+    },
+    {
+      "files": ["*.js", "*.jsx"],
+      "rules": {}
+    },
+    {
+      "files": ["*.graphql"],
+      "rules": {}
     }
-  },
-  "tags": [
-    "projectType:library",
-    "type:concrete",
-    "layer:infra",
-    "scope:frontend"
   ]
 }
