--- a/libs/frontend/infra/axios/tsconfig.json
+++ b/libs/frontend/infra/axios/tsconfig.json
@@ -1,6 +1,6 @@
 {
-  "extends": "../../../../../tsconfig.base.json",
-  "compilerOptions": {
+  "extends": "../../../../tsconfig.base.json",
+    "compilerOptions": {
     "module": "commonjs",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
