--- a/libs/frontend/abstract/application/tsconfig.lib.json
+++ b/libs/frontend/abstract/application/tsconfig.lib.json
@@ -5,6 +5,9 @@
     "declaration": true,
     "types": ["node"]
   },
-  "include": ["src/**/*.ts"],
+  "include": [
+    "src/**/*.ts",
+    "../domain/src/element/element-style.model.interface.ts"
+  ],
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"]
 }
