--- a/libs/backend/domain/redirect/project.json
+++ b/libs/backend/domain/redirect/project.json
@@ -1,95 +1,95 @@
 {
-  "name": "backend-domain-redirect",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/backend/domain/redirect/src",
+  "name": "backend-domain-redirect",
   "projectType": "library",
+  "sourceRoot": "libs/backend/domain/redirect/src",
+  "tags": [
+    "projectType:library",
+    "type:concrete",
+    "scope:backend",
+    "layer:domain"
+  ],
   "targets": {
     "lint": {
-      "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": [
-          "libs/backend/domain/redirect/**/*.{ts,tsx,js,jsx,graphql}"
-        ]
-      },
       "configurations": {
         "ci": {
           "format": "junit",
           "outputFile": "tmp/reports/lint/backend-domain-redirect.xml",
           "quiet": true
         }
-      }
+      },
+      "executor": "@nx/linter:eslint",
+      "options": {
+        "lintFilePatterns": [
+          "libs/backend/domain/redirect/**/*.{ts,tsx,js,jsx,graphql}"
+        ]
+      },
+      "outputs": ["{options.outputFile}"]
     },
     "test": {
+      "configurations": {
+        "ci": {
+          "ci": true,
+          "codeCoverage": true
+        }
+      },
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "libs/backend/domain/redirect/jest.config.ts",
         "passWithNoTests": true,
         "reporters": ["default"]
       },
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"]
+    },
+    "test:integration": {
       "configurations": {
         "ci": {
           "ci": true,
-          "codeCoverage": true
-        }
-      }
-    },
-    "test:integration": {
-      "defaultConfiguration": "dev",
-      "options": {
-        "memoryLimit": 8192,
-        "color": true,
-        "testPathPattern": ["[i].spec.ts"],
-        "jestConfig": "libs/backend/domain/redirect/jest.config.ts",
-        "passWithNoTests": true
-      },
-      "configurations": {
+          "codeCoverage": true,
+          "parallel": 3
+        },
         "dev": {
           "reporters": ["default"]
         },
         "test": {
           "reporters": ["default"]
-        },
-        "ci": {
-          "parallel": 3,
-          "ci": true,
-          "codeCoverage": true
         }
       },
+      "defaultConfiguration": "dev",
       "executor": "@nx/jest:jest",
+      "options": {
+        "color": true,
+        "jestConfig": "libs/backend/domain/redirect/jest.config.ts",
+        "memoryLimit": 8192,
+        "passWithNoTests": true,
+        "testPathPattern": ["[i].spec.ts"]
+      },
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"]
     },
     "test:unit": {
-      "defaultConfiguration": "dev",
-      "options": {
-        "color": true,
-        "memoryLimit": 8192,
-        "parallel": 3,
-        "testPathPattern": ["[^i].spec.ts"],
-        "jestConfig": "libs/backend/domain/redirect/jest.config.ts",
-        "passWithNoTests": true
-      },
       "configurations": {
+        "ci": {
+          "ci": true,
+          "codeCoverage": true
+        },
         "dev": {
           "reporters": ["default"]
         },
         "test": {
           "reporters": ["default"]
-        },
-        "ci": {
-          "ci": true,
-          "codeCoverage": true
         }
       },
+      "defaultConfiguration": "dev",
       "executor": "@nx/jest:jest",
+      "options": {
+        "color": true,
+        "jestConfig": "libs/backend/domain/redirect/jest.config.ts",
+        "memoryLimit": 8192,
+        "parallel": 3,
+        "passWithNoTests": true,
+        "testPathPattern": ["[^i].spec.ts"]
+      },
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"]
     }
-  },
-  "tags": [
-    "projectType:library",
-    "type:concrete",
-    "scope:backend",
-    "layer:domain"
-  ]
+  }
 }
