wip: update landing page

--- a/apps/landing/.eslintrc.json
+++ b/apps/landing/.eslintrc.json
@@ -13,6 +13,7 @@
         "project": ["apps/landing/tsconfig.json"]
       },
       "rules": {
+        "react/jsx-props-no-spreading": "off",
         "@next/next/no-html-link-for-pages": ["error", "apps/landing/pages"]
       }
     },
