--- a/libs/frontend/presentation/codelab-ui/.eslintrc.json
+++ b/libs/frontend/presentation/codelab-ui/.eslintrc.json
@@ -7,7 +7,9 @@
       "parserOptions": {
         "project": ["libs/frontend/presentation/codelab-ui/tsconfig.*?.json"]
       },
-      "rules": {}
+      "rules": {
+        "react/jsx-props-no-spreading": "off"
+      }
     },
     {
       "files": ["*.ts", "*.tsx"],
