--- a/libs/frontend/presentation/view/.eslintrc.json
+++ b/libs/frontend/presentation/view/.eslintrc.json
@@ -6,6 +6,9 @@
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "parserOptions": {
         "project": ["libs/frontend/presentation/view/tsconfig.*?.json"]
+      },
+      "rules": {
+        "react/jsx-props-no-spreading": "off"
       }
     },
     {
