--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "@react-hook/size": "2.1.2",
     "@react-hook/window-size": "3.0.7",
     "@react-hookz/web": "22.0.0",
+    "@react-spring/web": "^9.7.3",
     "@sinclair/typebox": "0.31.18",
     "@sotaproject/strikethrough": "^1.0.1",
     "@storybook/core-server": "7.5.1",
@@ -118,7 +119,7 @@
     "amqp-connection-manager": "^4.1.13",
     "amqplib": "^0.10.3",
     "animate.css": "4.1.1",
-    "antd": "^5.9.0",
+    "antd": "^5.11.0",
     "auth0": "4.0.1",
     "aws-lambda": "^1.0.7",
     "axios": "^1.5.0",
@@ -155,7 +156,6 @@
     "mobx-react-lite": "4.0.5",
     "mobx-utils": "6.0.8",
     "moment": "2.29.4",
-    "morphext": "2.4.7",
     "multer": "^1.4.5-lts.1",
     "neo4j-driver": "5.13.0",
     "nest-commander": "^3.7.1",
