--- a/apps/platform/project.json
+++ b/apps/platform/project.json
@@ -142,6 +142,49 @@
       },
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/apps/platform"]
+    },
+    "storybook": {
+      "executor": "@nx/storybook:storybook",
+      "options": {
+        "port": 4400,
+        "configDir": "apps/platform/.storybook"
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "build-storybook": {
+      "executor": "@nx/storybook:build",
+      "outputs": ["{options.outputDir}"],
+      "options": {
+        "outputDir": "dist/storybook/platform",
+        "configDir": "apps/platform/.storybook"
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "test-storybook": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "test-storybook -c apps/platform/.storybook --url=http://localhost:4400"
+      }
+    },
+    "static-storybook": {
+      "executor": "@nx/web:file-server",
+      "options": {
+        "buildTarget": "platform:build-storybook",
+        "staticFilePath": "dist/storybook/platform"
+      },
+      "configurations": {
+        "ci": {
+          "buildTarget": "platform:build-storybook:ci"
+        }
+      }
     }
   },
   "tags": ["projectType:application", "type:concrete"],
