--- a/apps/platform/tsconfig.json
+++ b/apps/platform/tsconfig.json
@@ -54,5 +54,9 @@
     "**/*.stories.jsx",
     "**/*.stories.tsx"
   ],
-  "references": []
+  "references": [
+    {
+      "path": "./tsconfig.storybook.json"
+    }
+  ]
 }
