--- a/package.json
+++ b/package.json
@@ -246,26 +246,29 @@
     "@nestjs/cli": "^10.0.2",
     "@nestjs/schematics": "10.0.1",
     "@nestjs/testing": "10.0.4",
-    "@nx/cypress": "17.0.0",
-    "@nx/devkit": "17.0.0",
-    "@nx/eslint": "17.0.0",
-    "@nx/eslint-plugin": "17.0.0",
-    "@nx/jest": "17.0.0",
-    "@nx/js": "17.0.0",
-    "@nx/nest": "17.0.0",
-    "@nx/next": "17.0.0",
-    "@nx/node": "17.0.0",
-    "@nx/plugin": "17.0.0",
-    "@nx/react": "17.0.0",
-    "@nx/storybook": "17.0.0",
-    "@nx/web": "17.0.0",
-    "@nx/webpack": "17.0.0",
-    "@nx/workspace": "17.0.0",
+    "@nx/cypress": "17.0.2",
+    "@nx/devkit": "17.0.2",
+    "@nx/eslint": "17.0.2",
+    "@nx/eslint-plugin": "17.0.2",
+    "@nx/jest": "17.0.2",
+    "@nx/js": "17.0.2",
+    "@nx/nest": "17.0.2",
+    "@nx/next": "17.0.2",
+    "@nx/node": "17.0.2",
+    "@nx/plugin": "17.0.2",
+    "@nx/react": "17.0.2",
+    "@nx/storybook": "17.0.2",
+    "@nx/web": "17.0.2",
+    "@nx/webpack": "17.0.2",
+    "@nx/workspace": "17.0.2",
     "@storybook/addon-essentials": "7.5.1",
+    "@storybook/addon-interactions": "^7.5.1",
     "@storybook/core-common": "7.0.7",
-    "@storybook/nextjs": "7.0.7",
+    "@storybook/jest": "~0.1.0",
+    "@storybook/nextjs": "7.5.1",
     "@storybook/react-webpack5": "7.5.1",
     "@storybook/test-runner": "0.13.0",
+    "@storybook/testing-library": "~0.2.0",
     "@svgr/webpack": "8.0.1",
     "@swc-node/register": "1.6.8",
     "@swc/cli": "~0.1.62",
@@ -337,7 +340,6 @@
     "concurrently": "7.0.0",
     "cookie": "^0.5.0",
     "cross-env": "7.0.3",
-    "css-loader": "5.2.6",
     "cypress": "^13.3.0",
     "cypress-jest-adapter": "^0.1.1",
     "cypress-log-to-output": "^1.1.2",
@@ -396,10 +398,11 @@
     "lerna": "^7.0.1",
     "lint-staged": "13.2.2",
     "madge": "5.0.1",
-    "nx": "17.0.0",
+    "nx": "17.0.2",
     "nx-cloud": "16.5.2",
     "postcss": "8.4.24",
     "postcss-import": "14.1.0",
+    "storybook-css-modules": "^1.0.8",
     "tailwindcss": "3.3.2",
     "ts-essentials": "9.1.2",
     "ts-jest": "29.1.0",
