--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,7 @@ AUTH0_CLIENT_SECRET=
 AUTH0_AUDIENCE=https://codelab-app-dev.us.auth0.com/api/v2/
 # Configure for @nextjs-auth0
 AUTH0_BASE_URL=http://127.0.0.1:3000
+
+# Redis is used by @nestjs/bull for DB seed requests queue
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
