--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "@neo4j/graphql": "4.3.0",
     "@neo4j/graphql-ogm": "4.3.0",
     "@nestjs/apollo": "11.0.6",
-    "@nestjs/bull": "0.6.3",
+    "@nestjs/bull": "^10.0.1",
     "@nestjs/common": "10.0.4",
     "@nestjs/config": "^2.3.2",
     "@nestjs/core": "10.0.4",
@@ -122,6 +122,7 @@
     "auth0": "4.0.1",
     "aws-lambda": "^1.0.7",
     "axios": "^1.5.0",
+    "bull": "^4.11.4",
     "chalk": "4.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
