--- a/package.json
+++ b/package.json
@@ -102,6 +102,10 @@
     "@react-hook/window-size": "3.0.7",
     "@react-hookz/web": "22.0.0",
     "@react-spring/web": "^9.7.3",
+    "@rjsf/antd": "^5.13.4",
+    "@rjsf/core": "^5.13.4",
+    "@rjsf/utils": "^5.13.4",
+    "@rjsf/validator-ajv8": "^5.13.4",
     "@sinclair/typebox": "0.31.18",
     "@sotaproject/strikethrough": "^1.0.1",
     "@storybook/core-server": "7.5.1",
