--- a/apps/cli/project.json
+++ b/apps/cli/project.json
@@ -58,14 +58,7 @@
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "apps/cli/jest.config.ts",
-        "passWithNoTests": true,
         "reporters": ["default"]
-      },
-      "configurations": {
-        "ci": {
-          "ci": true,
-          "codeCoverage": true
-        }
       }
     },
     "test:integration": {
@@ -74,8 +67,7 @@
         "memoryLimit": 8192,
         "color": true,
         "testPathPattern": ["[i].spec.ts"],
-        "jestConfig": "apps/cli/jest.config.ts",
-        "passWithNoTests": true
+        "jestConfig": "apps/cli/jest.config.ts"
       },
       "configurations": {
         "dev": {
@@ -85,9 +77,7 @@
           "reporters": ["default"]
         },
         "ci": {
-          "parallel": 3,
-          "ci": true,
-          "codeCoverage": true
+          "parallel": 3
         }
       },
       "executor": "@nx/jest:jest",
@@ -100,8 +90,7 @@
         "memoryLimit": 8192,
         "parallel": 3,
         "testPathPattern": ["[^i].spec.ts"],
-        "jestConfig": "apps/cli/jest.config.ts",
-        "passWithNoTests": true
+        "jestConfig": "apps/cli/jest.config.ts"
       },
       "configurations": {
         "dev": {
@@ -109,10 +98,6 @@
         },
         "test": {
           "reporters": ["default"]
-        },
-        "ci": {
-          "ci": true,
-          "codeCoverage": true
         }
       },
       "executor": "@nx/jest:jest",
