--- a/libs/backend/domain/atom/project.json
+++ b/libs/backend/domain/atom/project.json
@@ -25,14 +25,7 @@
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "libs/backend/domain/atom/jest.config.ts",
-        "passWithNoTests": true,
         "reporters": ["default"]
-      },
-      "configurations": {
-        "ci": {
-          "ci": true,
-          "codeCoverage": true
-        }
       }
     },
     "test:integration": {
@@ -41,8 +34,7 @@
         "memoryLimit": 8192,
         "color": true,
         "testPathPattern": ["[i].spec.ts"],
-        "jestConfig": "libs/backend/domain/atom/jest.config.ts",
-        "passWithNoTests": true
+        "jestConfig": "libs/backend/domain/atom/jest.config.ts"
       },
       "configurations": {
         "dev": {
@@ -52,9 +44,7 @@
           "reporters": ["default"]
         },
         "ci": {
-          "parallel": 3,
-          "ci": true,
-          "codeCoverage": true
+          "parallel": 3
         }
       },
       "executor": "@nx/jest:jest",
@@ -67,8 +57,7 @@
         "memoryLimit": 8192,
         "parallel": 3,
         "testPathPattern": ["[^i].spec.ts"],
-        "jestConfig": "libs/backend/domain/atom/jest.config.ts",
-        "passWithNoTests": true
+        "jestConfig": "libs/backend/domain/atom/jest.config.ts"
       },
       "configurations": {
         "dev": {
@@ -76,10 +65,6 @@
         },
         "test": {
           "reporters": ["default"]
-        },
-        "ci": {
-          "ci": true,
-          "codeCoverage": true
         }
       },
       "executor": "@nx/jest:jest",
