--- a/libs/frontend/application/app/project.json
+++ b/libs/frontend/application/app/project.json
@@ -31,14 +31,7 @@
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "libs/frontend/application/app/jest.config.ts",
-        "passWithNoTests": true,
         "reporters": ["default"]
-      },
-      "configurations": {
-        "ci": {
-          "ci": true,
-          "codeCoverage": true
-        }
       }
     },
     "test:integration": {
@@ -47,8 +40,7 @@
         "memoryLimit": 8192,
         "color": true,
         "testPathPattern": ["[i].spec.ts"],
-        "jestConfig": "libs/frontend/application/app/jest.config.ts",
-        "passWithNoTests": true
+        "jestConfig": "libs/frontend/application/app/jest.config.ts"
       },
       "configurations": {
         "dev": {
@@ -58,9 +50,7 @@
           "reporters": ["default"]
         },
         "ci": {
-          "parallel": 3,
-          "ci": true,
-          "codeCoverage": true
+          "parallel": 3
         }
       },
       "executor": "@nx/jest:jest",
@@ -73,8 +63,7 @@
         "memoryLimit": 8192,
         "parallel": 3,
         "testPathPattern": ["[^i].spec.ts"],
-        "jestConfig": "libs/frontend/application/app/jest.config.ts",
-        "passWithNoTests": true
+        "jestConfig": "libs/frontend/application/app/jest.config.ts"
       },
       "configurations": {
         "dev": {
@@ -82,10 +71,6 @@
         },
         "test": {
           "reporters": ["default"]
-        },
-        "ci": {
-          "ci": true,
-          "codeCoverage": true
         }
       },
       "executor": "@nx/jest:jest",
