--- a/nx.json
+++ b/nx.json
@@ -135,15 +135,6 @@
       "dependsOn": ["^build"],
       "inputs": ["prod", "^prod"]
     },
-    "test": {
-      "inputs": ["default", "^default", "{workspaceRoot}/jest.preset.js"]
-    },
-    "test:unit": {
-      "inputs": ["default", "^default", "{workspaceRoot}/jest.preset.js"]
-    },
-    "test:integration": {
-      "inputs": ["default", "^default", "{workspaceRoot}/jest.preset.js"]
-    },
     "e2e": {
       "inputs": ["default", "^default"]
     },
@@ -158,6 +149,19 @@
         "{projectRoot}/tsconfig.storybook.json"
       ],
       "cache": true
+    },
+    "@nx/jest:jest": {
+      "cache": true,
+      "inputs": ["default", "^default", "{workspaceRoot}/jest.preset.js"],
+      "options": {
+        "passWithNoTests": true
+      },
+      "configurations": {
+        "ci": {
+          "ci": true,
+          "codeCoverage": true
+        }
+      }
     }
   },
   "namedInputs": {
