--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "packageManager": "yarn@3.5.1",
   "version": "0.0.1",
   "license": "MIT",
-  "sideEffects": false,
   "scripts": {
     "postinstall": "nx run-many build --target=tools-workspace,eslint-plugin",
     "e2e": "yarn nx e2e platform-e2e",
@@ -33,6 +32,7 @@
   },
   "private": true,
   "dependencies": {
+    "@ant-design/cssinjs": "^1.17.2",
     "@ant-design/icons": "5.0.1",
     "@ant-design/pro-components": "2.4.4",
     "@apollo/client": "3.7.15",
@@ -102,9 +102,13 @@
     "@react-hook/window-size": "3.0.7",
     "@react-hookz/web": "22.0.0",
     "@react-spring/web": "^9.7.3",
+    "@rjsf/antd": "^5.13.5",
+    "@rjsf/core": "^5.13.5",
+    "@rjsf/utils": "^5.13.5",
+    "@rjsf/validator-ajv8": "^5.13.5",
     "@sinclair/typebox": "0.31.18",
     "@sotaproject/strikethrough": "^1.0.1",
-    "@storybook/core-server": "7.5.1",
+    "@storybook/core-server": "7.5.3",
     "@supabase/supabase-js": "2.1.1",
     "@swc/helpers": "0.5.3",
     "@twind/core": "^1.1.3",
@@ -246,29 +250,29 @@
     "@nestjs/cli": "^10.0.2",
     "@nestjs/schematics": "10.0.1",
     "@nestjs/testing": "10.0.4",
-    "@nx/cypress": "17.0.2",
-    "@nx/devkit": "17.0.2",
-    "@nx/eslint": "17.0.2",
-    "@nx/eslint-plugin": "17.0.2",
-    "@nx/jest": "17.0.2",
-    "@nx/js": "17.0.2",
-    "@nx/nest": "17.0.2",
-    "@nx/next": "17.0.2",
-    "@nx/node": "17.0.2",
-    "@nx/plugin": "17.0.2",
-    "@nx/react": "17.0.2",
-    "@nx/storybook": "17.0.2",
-    "@nx/web": "17.0.2",
-    "@nx/webpack": "17.0.2",
-    "@nx/workspace": "17.0.2",
-    "@storybook/addon-essentials": "7.5.1",
-    "@storybook/addon-interactions": "^7.5.1",
-    "@storybook/core-common": "7.0.7",
-    "@storybook/jest": "~0.1.0",
-    "@storybook/nextjs": "7.5.1",
-    "@storybook/react-webpack5": "7.5.1",
-    "@storybook/test-runner": "0.13.0",
-    "@storybook/testing-library": "~0.2.0",
+    "@nx/cypress": "17.1.1",
+    "@nx/devkit": "17.1.1",
+    "@nx/eslint": "17.1.1",
+    "@nx/eslint-plugin": "17.1.1",
+    "@nx/jest": "17.1.1",
+    "@nx/js": "17.1.1",
+    "@nx/nest": "17.1.1",
+    "@nx/next": "17.1.1",
+    "@nx/node": "17.1.1",
+    "@nx/plugin": "17.1.1",
+    "@nx/react": "17.1.1",
+    "@nx/storybook": "17.1.1",
+    "@nx/web": "17.1.1",
+    "@nx/webpack": "17.1.1",
+    "@nx/workspace": "17.1.1",
+    "@storybook/addon-essentials": "7.5.3",
+    "@storybook/addon-interactions": "7.5.3",
+    "@storybook/core-common": "7.5.3",
+    "@storybook/jest": "0.2.3",
+    "@storybook/nextjs": "7.5.3",
+    "@storybook/react-webpack5": "7.5.3",
+    "@storybook/test-runner": "0.14.0",
+    "@storybook/testing-library": "0.2.2",
     "@svgr/webpack": "8.0.1",
     "@swc-node/register": "1.6.8",
     "@swc/cli": "~0.1.62",
@@ -325,8 +329,8 @@
     "@types/wait-on": "5.3.1",
     "@types/webpack": "5.28.0",
     "@types/yargs": "17.0.24",
-    "@typescript-eslint/eslint-plugin": "5.62.0",
-    "@typescript-eslint/parser": "5.62.0",
+    "@typescript-eslint/eslint-plugin": "6.10.0",
+    "@typescript-eslint/parser": "6.10.0",
     "@vercel/remote-nx": "^1.1.1",
     "@welldone-software/why-did-you-render": "7.0.1",
     "ajv-formats": "2.1.1",
@@ -398,7 +402,7 @@
     "lerna": "^7.0.1",
     "lint-staged": "13.2.2",
     "madge": "5.0.1",
-    "nx": "17.0.2",
+    "nx": "17.1.1",
     "nx-cloud": "16.5.2",
     "postcss": "8.4.24",
     "postcss-import": "14.1.0",
@@ -408,7 +412,7 @@
     "ts-jest": "29.1.0",
     "ts-morph": "^19.0.0",
     "ts-node": "10.9.1",
-    "typescript": "5.1.5",
+    "typescript": "5.2.2",
     "utility-types": "3.10.0",
     "wait-on": "6.0.1"
   },
