--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,6 @@
   "root": true,
   "ignorePatterns": ["**/*"],
   "plugins": [
-    "@nx",
     "import",
     "unused-imports",
     // "react-hooks",
@@ -57,7 +56,7 @@
       "plugins": [],
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "rules": {
-        // "unused-imports/no-unused-imports-ts": "error",
+        "@typescript-eslint/no-unused-vars": "off",
         "sort-destructure-keys/sort-destructure-keys": [
           "error",
           { "caseSensitive": false }
@@ -143,11 +142,7 @@
     },
     {
       "files": ["*.ts", "*.tsx"],
-      "extends": [
-        "plugin:@nx/typescript",
-        "plugin:jest-formatting/strict",
-        "plugin:import/typescript"
-      ],
+      "extends": ["plugin:jest-formatting/strict", "plugin:import/typescript"],
       "rules": {
         "curly": ["error", "all"],
         "prefer-arrow/prefer-arrow-functions": "error",
@@ -213,11 +208,6 @@
       "rules": {
         "react/jsx-props-no-spreading": "off"
       }
-    },
-    {
-      "files": ["*.js", "*.jsx"],
-      "extends": ["plugin:@nx/javascript"],
-      "rules": {}
     },
     {
       "files": ["*.graphql"],
