--- a/apps/platform-api/project.json
+++ b/apps/platform-api/project.json
@@ -44,6 +44,14 @@
         }
       }
     },
+    "test": {
+      "executor": "@nx/jest:jest",
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "options": {
+        "jestConfig": "apps/platform-api/jest.config.ts",
+        "reporters": ["default"]
+      }
+    },
     "export": {
       "executor": "@nx/next:export",
       "options": {
