--- a/apps/platform-api/tsconfig.json
+++ b/apps/platform-api/tsconfig.json
@@ -3,10 +3,12 @@
   "compilerOptions": {
     "jsx": "preserve",
     "allowJs": true,
+    "lib": ["es2021"],
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    "types": ["cypher"],
+    "types": ["node", "cypher"],
+    "module": "esnext",
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "resolveJsonModule": true,
@@ -15,5 +17,10 @@
     "plugins": [{ "name": "next" }]
   },
   "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", "next-env.d.ts"],
-  "exclude": ["node_modules", "jest.config.ts", "src/**/*.spec.ts"]
+  "exclude": ["node_modules", "jest.config.ts", "**/*.spec.ts", "**/*.test.ts"],
+  "references": [
+    {
+      "path": "./tsconfig.spec.json"
+    }
+  ]
 }
