--- a/apps/platform/tsconfig.json
+++ b/apps/platform/tsconfig.json
@@ -57,6 +57,9 @@
   "references": [
     {
       "path": "./tsconfig.storybook.json"
+    },
+    {
+      "path": "./tsconfig.spec.json"
     }
   ]
 }
