--- a/libs/backend/infra/adapter/neo4j/project.json
+++ b/libs/backend/infra/adapter/neo4j/project.json
@@ -19,6 +19,14 @@
           "quiet": true
         }
       }
+    },
+    "test": {
+      "executor": "@nx/jest:jest",
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "options": {
+        "jestConfig": "libs/backend/infra/adapter/neo4j/jest.config.ts",
+        "reporters": ["default"]
+      }
     }
   },
   "tags": [
