--- a/package.json
+++ b/package.json
@@ -175,7 +175,7 @@
     "passport-local": "^1.0.0",
     "pino": "^8.14.1",
     "pino-http": "^8.3.3",
-    "prettier": "3.0.3",
+    "prettier": "2.8.8",
     "puppeteer": "20.1.1",
     "ramda": "0.29.0",
     "re-resizable": "6.9.1",
@@ -205,6 +205,7 @@
     "styled-jsx": "^5.1.2",
     "stylis": "^4.0.0",
     "sucrase": "^3.32.0",
+    "supertest": "^6.3.3",
     "tar": "^6.1.13",
     "ts-json-schema-generator": "^1.2.0",
     "tslib": "2.3.1",
@@ -321,6 +322,7 @@
     "@types/react-syntax-highlighter": "15.5.4",
     "@types/scroll-into-view": "^1.16.0",
     "@types/stringify-object": "4.0.1",
+    "@types/supertest": "^2.0.16",
     "@types/tar": "^6.1.4",
     "@types/testing-library__cypress": "5.0.9",
     "@types/testing-library__jest-dom": "5.14.6",
@@ -372,7 +374,7 @@
     "eslint-plugin-jsx-a11y": "6.8.0",
     "eslint-plugin-lodash": "^7.4.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
-    "eslint-plugin-prettier": "5.0.1",
+    "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-simple-import-sort": "10.0.0",
