wip: setup integration spec for resolver

--- a/apps/platform-api/tsconfig.json
+++ b/apps/platform-api/tsconfig.json
@@ -3,24 +3,26 @@
   "compilerOptions": {
     "jsx": "preserve",
     "allowJs": true,
-    "lib": ["es2021"],
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    "types": ["node", "cypher"],
-    "module": "esnext",
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "incremental": true,
-    "plugins": [{ "name": "next" }]
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
+    "types": ["jest", "node"]
   },
   "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", "next-env.d.ts"],
-  "exclude": ["node_modules", "jest.config.ts", "**/*.spec.ts", "**/*.test.ts"],
-  "references": [
-    {
-      "path": "./tsconfig.spec.json"
-    }
+  "exclude": [
+    "node_modules",
+    "jest.config.ts",
+    "src/**/*.spec.ts",
+    "src/**/*.test.ts"
   ]
 }
