--- a/package.json
+++ b/package.json
@@ -279,6 +279,7 @@
     "@swc/cli": "~0.1.62",
     "@swc/core": "1.3.92",
     "@swc/jest": "^0.2.29",
+    "@swc/plugin-styled-components": "^1.5.67",
     "@testing-library/cypress": "10.0.1",
     "@testing-library/dom": "9.2.0",
     "@testing-library/jest-dom": "5.16.5",
@@ -311,8 +312,8 @@
     "@types/passport-local": "^1.0.35",
     "@types/prettier": "2.7.3",
     "@types/ramda": "0.29.2",
-    "@types/react": "18.2.24",
-    "@types/react-dom": "18.2.9",
+    "@types/react": "18.2.33",
+    "@types/react-dom": "18.2.14",
     "@types/react-grid-layout": "1.3.4",
     "@types/react-is": "18.2.2",
     "@types/react-resizable": "1.7.4",
@@ -322,6 +323,7 @@
     "@types/react-syntax-highlighter": "15.5.4",
     "@types/scroll-into-view": "^1.16.0",
     "@types/stringify-object": "4.0.1",
+    "@types/styled-components": "5.1.26",
     "@types/supertest": "^2.0.16",
     "@types/tar": "^6.1.4",
     "@types/testing-library__cypress": "5.0.9",
@@ -339,6 +341,8 @@
     "ajv-keywords": "^5.1.0",
     "auth0-js": "^9.22.1",
     "autoprefixer": "10.4.14",
+    "babel-jest": "^29.4.1",
+    "babel-plugin-styled-components": "1.10.7",
     "chance": "^1.1.11",
     "commitizen": "4.2.5",
     "commitlint-config-cz": "0.13.3",
