ci: test vercel logger
wip: add test version to index
ci: add vercel runner

--- a/nx.json
+++ b/nx.json
@@ -32,7 +32,10 @@
           "lint",
           "e2e",
           "build-storybook"
-        ]
+        ],
+        "canTrackAnalytics": true,
+        "showUsageWarnings": true,
+        "parallel": 3
       }
     }
   },
