--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "npm": "please-use-yarn",
     "pnpm": "please-use-yarn"
   },
+  "type": "module",
   "packageManager": "yarn@3.5.1",
   "version": "0.0.1",
   "license": "MIT",
