refactor: elements resolver for page and component

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -430,6 +430,7 @@ workflows:
                 - master
           requires:
             - setup-workspace
+            - codegen
       - e2e:
           filters:
             branches:
