fix: port for platform-api

--- a/apps/platform-api/project.json
+++ b/apps/platform-api/project.json
@@ -53,6 +53,7 @@
           "buildTarget": "platform-api:build:prod"
         },
         "test": {
+          "port": 4001,
           "buildTarget": "platform-api:build:test"
         }
       },
