wip: refactor renderer and fix specs

--- a/package.json
+++ b/package.json
@@ -157,7 +157,7 @@
     "memfs": "^4.2.0",
     "micro": "^10.0.1",
     "mobx": "6.11.0",
-    "mobx-keystone": "1.7.1",
+    "mobx-keystone": "1.9.0",
     "mobx-react-lite": "4.0.5",
     "mobx-utils": "6.0.8",
     "moment": "2.29.4",
@@ -282,7 +282,7 @@
     "@testing-library/cypress": "10.0.1",
     "@testing-library/dom": "9.2.0",
     "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "14.0.0",
+    "@testing-library/react": "^14.1.2",
     "@testing-library/react-hooks": "8.0.1",
     "@testing-library/user-event": "14.4.3",
     "@types/adm-zip": "^0.5.0",
