revert: changes after rebase

--- a/libs/frontend/abstract/domain/project.json
+++ b/libs/frontend/abstract/domain/project.json
@@ -1,29 +1,30 @@
 {
-  "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "name": "frontend-abstract-domain",
+  "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/frontend/abstract/domain/src",
-  "tags": [
-    "projectType:library",
-    "type:abstract",
-    "scope:frontend",
-    "layer:domain"
-  ],
+  "projectType": "library",
   "targets": {
     "lint": {
-      "configurations": {
-        "ci": {
-          "format": "junit",
-          "outputFile": "tmp/reports/lint/frontend-abstract-domain.xml",
-          "quiet": true
-        }
-      },
       "executor": "@nx/eslint:lint",
       "options": {
         "lintFilePatterns": [
           "libs/frontend/abstract/domain/**/*.{ts,tsx,js,jsx,graphql}"
         ]
       },
-      "outputs": ["{options.outputFile}"]
+      "outputs": ["{options.outputFile}"],
+      "configurations": {
+        "ci": {
+          "format": "junit",
+          "outputFile": "tmp/reports/lint/frontend-abstract-domain.xml",
+          "quiet": true
+        }
+      }
     }
-  }
+  },
+  "tags": [
+    "projectType:library",
+    "type:abstract",
+    "scope:frontend",
+    "layer:domain"
+  ]
 }
