--- a/libs/frontend/application/lambda/project.json
+++ b/libs/frontend/application/lambda/project.json
@@ -1,8 +1,8 @@
 {
-  "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "name": "frontend-application-lambda",
-  "projectType": "library",
+  "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/frontend/application/lambda/src",
+  "projectType": "library",
   "tags": [
     "projectType:library",
     "type:concrete",
@@ -11,100 +11,61 @@
   ],
   "targets": {
     "lint": {
+      "executor": "@nx/eslint:lint",
+      "outputs": ["{options.outputFile}"],
+      "options": {
+        "lintFilePatterns": [
+          "libs/frontend/application/lambda/**/*.{ts,tsx,js,jsx,graphql}"
+        ]
+      },
       "configurations": {
         "ci": {
           "format": "junit",
           "outputFile": "tmp/reports/lint/frontend-application-lambda.xml",
           "quiet": true
         }
-      },
-      "executor": "@nx/eslint:lint",
-      "options": {
-        "lintFilePatterns": [
-          "libs/frontend/application/lambda/**/*.{ts,tsx,js,jsx,graphql}"
-        ]
-      },
-      "outputs": ["{options.outputFile}"]
+      }
     },
     "test": {
       "executor": "@nx/jest:jest",
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "libs/frontend/application/lambda/jest.config.ts",
         "reporters": ["default"]
-      },
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"]
-    },
-    "test:integration": {
-      "configurations": {
-        "ci": {
-          "parallel": 3
-        },
-        "dev": {
-          "reporters": ["default"]
-        },
-        "test": {
-          "reporters": ["default"]
-        }
-      },
-      "defaultConfiguration": "dev",
-      "defaultConfiguration": "dev",
-      "executor": "@nx/jest:jest",
-      "options": {
-        "color": true,
-        "jestConfig": "libs/frontend/application/lambda/jest.config.ts",
-        "memoryLimit": 8192,
-        "testPathPattern": ["[i].spec.ts"]
-      },
-      "options": {
-        "color": true,
-        "jestConfig": "libs/frontend/application/lambda/jest.config.ts",
-        "memoryLimit": 8192,
-        "passWithNoTests": true,
-        "testPathPattern": ["[i].spec.ts"]
-      },
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"]
-    },
-    "test:integration": {
-      "configurations": {
-        "ci": {
-          "ci": true,
-          "codeCoverage": true,
-          "parallel": 3
-        },
-        "dev": {
-          "reporters": ["default"]
-        },
-        "test": {
-          "reporters": ["default"]
-        }
-      },
-      "defaultConfiguration": "dev",
-      "defaultConfiguration": "dev",
-      "defaultConfiguration": "dev",
-      "executor": "@nx/jest:jest",
-      "options": {
-        "color": true,
-        "jestConfig": "libs/frontend/application/lambda/jest.config.ts",
-        "memoryLimit": 8192,
-        "passWithNoTests": true,
-        "testPathPattern": ["[i].spec.ts"]
-      },
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"]
-    },
-    "test:unit": {
-      "configurations": {
-        "ci": {
-          "ci": true,
-          "codeCoverage": true
-        }
       }
     },
-    "test:unit": {
+    "test:integration": {
+      "defaultConfiguration": "dev",
+      "options": {
+        "memoryLimit": 8192,
+        "color": true,
+        "testPathPattern": ["[i].spec.ts"],
+        "jestConfig": "libs/frontend/application/lambda/jest.config.ts"
+      },
       "configurations": {
-        "ci": {
-          "ci": true,
-          "codeCoverage": true
+        "dev": {
+          "reporters": ["default"]
         },
+        "test": {
+          "reporters": ["default"]
+        },
+        "ci": {
+          "parallel": 3
+        }
+      },
+      "executor": "@nx/jest:jest",
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"]
+    },
+    "test:unit": {
+      "defaultConfiguration": "dev",
+      "options": {
+        "color": true,
+        "memoryLimit": 8192,
+        "parallel": 3,
+        "testPathPattern": ["[^i].spec.ts"],
+        "jestConfig": "libs/frontend/application/lambda/jest.config.ts"
+      },
+      "configurations": {
         "dev": {
           "reporters": ["default"]
         },
@@ -112,22 +73,7 @@
           "reporters": ["default"]
         }
       },
-      "defaultConfiguration": "dev",
       "executor": "@nx/jest:jest",
-      "options": {
-        "color": true,
-        "memoryLimit": 8192,
-        "parallel": 3,
-        "testPathPattern": ["[^i].spec.ts"]
-      },
-      "options": {
-        "color": true,
-        "jestConfig": "libs/frontend/application/lambda/jest.config.ts",
-        "memoryLimit": 8192,
-        "parallel": 3,
-        "passWithNoTests": true,
-        "testPathPattern": ["[^i].spec.ts"]
-      },
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"]
     }
   }
